# hello-cd

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.build  Dockerfile.go-agent  Dockerfile.gocd-agent  Dockerfile.run  LICENSE.md  README.md  analyze-coverage.sh  appveyor.yml  build-tester.sh  build.sh  conanfile.txt  config.gocd.yaml  docker-buildsource.sh  docker-runtests.sh  dockerbuild.sh  entrypoint.sh  gocd-start-docker-agent.sh  make-scripts-executable.sh  repo.config  runtests.sh  start-gocd-agent.sh  test.txt
cmake/: EnableUpstreamTargets.cmake  boost-download.cmake  code-analysis.cmake  code-coverage.cmake  configure_file.cmake  cucumber-testing.cmake  determine-toolchain.sh  git-download.cmake  replace_in_file.cmake  testing.cmake
cmake/toolchain/: linux-gcc-x86.cmake  linux-gcc-x86_64.cmake  windows-gcc-x86_64.cmake  windows-mingw-x86_64.cmake  windows-msvc-x86.cmake  windows-msvc-x86_64.cmake
conan/: activate-envars.sh  determine-profile.sh  profile-linux.txt  start-server.sh
conan/profile/: linux-clang.txt  linux-gcc.txt  windows-gcc.txt  windows-mingw.txt  windows-msvc.txt
conan/server/: Dockerfile  entrypoint.sh  server.conf
docker/: .dockerignore  .gitignore  Dockerfile.build  analyze-coverage.sh  build-image.sh  build.Dockerfile  build.sh  docker-buildsource.sh  docker-runtests.sh  push-build-artifact.sh  run-analysis.sh  run-command.sh  run-script.sh  runtests.sh  start-network.sh  start-registry.sh  stop-network.sh  windows-msvc.dockerfile
docker/linux/: open-swarm-ports.sh
gocd/: .gitignore  Dockerfile.gocd-agent  Dockerfile.gocd-server  config.gocd.yaml  cruise-config.xml  docker-gocd-agent-entrypoint.sh  start-agent.sh  start-gocd-agent.sh  start-gocd-server.sh  start-server.sh
gocd/agent/: Dockerfile  custom-entrypoint.sh
gocd/server/: Dockerfile  custom-entrypoint.sh
modules/catch/: CMakeLists.txt
modules/cpplocate/: CMakeLists.txt
modules/fakeit/: CMakeLists.txt
scripts/: analyze-coverage.sh  build-tester.sh  build.sh  determine-toolchain.sh  get-arch.sh  get-arg.sh  get-compiler.sh  get-os.sh  get-reponame.sh  install-dependencies.sh  install.sh  make-scripts-executable.sh  run-acceptance-tests.sh  run-coverage-analysis.sh  run-static-analysis.sh  run-unit-tests.sh  runtests.sh
src/: CMakeLists.txt  calculator.cpp  calculator.hpp  main.c  main.cpp  resources.h  test.cpp  test.hpp
src/cmake/: boost-build.cmake  boost-download.cmake  code-analysis.cmake  code-coverage.cmake  git-download.cmake  testing.cmake
src/config/: config.h  config.h.in  resources.h
src/myapp/: CMakeLists.txt
src/myapp/src/: main.cpp
src/mylib/: CMakeLists.txt
src/mylib/config/: config.h.in  resources.h.in
src/mylib/src/: calculator.cpp
src/mylib/tests/: CMakeLists.txt  calculator_tests.cpp  misc_tests.cpp
src/mylib/tests/include/: calculator_tests.hpp
src/myutils/: CMakeLists.txt
src/myutils/include/myutils/: util.hpp
src/myutils/src/: util.cpp
src/myutils/tests/: CMakeLists.txt  util_tests.cpp
src/resources/: resource2.txt  resources.h  resources.h.in
test/: CMakeLists.txt  calculator_tests.cpp  main.cpp  resources.h
test/config/: config.h  config.h.in  resources.h
test/resources/: resources.h  resources.h.in  test.txt
test/src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_info.h.in
tests/config/: resources.h.in
tests/features/: walking_skeleton  walking_skeleton.feature
tests/features/step_definitions/: walking_skeleton.cpp
